added display for comments

--- a/client/templates/posts/postsPage.html
+++ b/client/templates/posts/postsPage.html
@@ -2,4 +2,9 @@
   <div class="post-page page">
     {{> postItem}}
   </div>
+  <div class='comments'>
+    {{#each comments}}
+      {{> commentItem }}
+    {{/each}}
+  </div>
 </template>
