--- a/client/templates/posts/postsPage.html
+++ b/client/templates/posts/postsPage.html
@@ -1,10 +1,16 @@
 <template name="postPage">
   <div class="post-page page">
     {{> postItem}}
-  </div>
-  <div class='comments'>
-    {{#each comments}}
-      {{> commentItem }}
-    {{/each}}
-  </div>
+    <ul class='comments'>
+      {{#each comments}}
+        {{> commentItem }}
+      {{/each}}
+    </ul>
+  {{#if currentUser}}
+    {{>commentSubmit}}
+  {{else}}
+    <p> "please log in to leave a comment." </p>
+  {{/if}}
+</div>
+
 </template>
