--- a/client/templates/application/header.html
+++ b/client/templates/application/header.html
@@ -8,9 +8,18 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
-      {{#if currentUser}}<a class="navbar-brand" href="{{pathFor 'postSubmit'}}">Submit Post</a>{{/if}}
     </div>
     <div class="collapse navbar-collapse" id="navigation">
+      <ul class='nav navbar-nav'>
+        {{#if currentUser}}
+        <li>
+          <a href="{{pathFor 'postSubmit'}}">Submit Post</a>
+        </li>
+        <li class='dropdown'>
+          {{> notifications}}
+         </li>
+        {{/if}}
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         {{> loginButtons}}
       </ul>
